added arguments to run.py, which you can call from the command line

--- a/StellarClusterCNN.ipynb
+++ b/StellarClusterCNN.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4aff773d-1974-434a-80fe-3e2db48e2ff8",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
     "            total_loss += loss.item() * inputs.size(0)\n",
     "\n",
     "    avg_loss = total_loss / len(val_loader.dataset)\n",
-    "    print(f'Validation MSE: {avg_loss:.6f}')"
+    "    print(f'Validation Loss: {avg_loss:.6f}')"
    ]
   },
   {
@@ -1094,14 +1094,6 @@
    "source": [
     "train(model, num_epochs, train_loader, val_loader)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53bd0458-65d2-4448-801b-3351b1b34dda",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
